# nifly-utils

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml  clang-tidy.yml  codeql.yml
cmake/: CMakeLists.txt
source/: NiflyUtils.cpp
